[package]
name = "dialog-box"
version = "0.1.0"
authors = ["Pankaj Chaudhary <pankajchaudhary172@gmail.com>"]
edition = "2018"

description = "Library to use different dialog-box/popup in Rust"
repository = "https://github.com/PankajChaudhary5/dialog-box.git"
readme = "README.md"
keywords = ["dialog-box", "popup"]
categories = ["Command-line"]
license = "MIT"

[dependencies]
